tests/compile/funcs/func_wrong_arg_num.stderr
error: SignatureError: function snake_case(arg) has been called with incompatible arguments: snake_case(fooBar, barBaz)
 --> tests/compile/funcs/func_wrong_arg_num.rs:4:25
  |
4 | compose_idents!(my_fn = snake_case(fooBar, barBaz), {
  |                         ^^^^^^^^^^

error[E0425]: cannot find function `foo_baz` in this scope
  --> tests/compile/funcs/func_wrong_arg_num.rs:11:16
   |
11 |     assert_eq!(foo_baz(), 42);
   |                ^^^^^^^ not found in this scope
